# paro

./: CMakeCache.txt  CMakeLists.txt  Circle.cpp  ISP  LSP  Makefile  OCP  Queue.hpp  README.md  README.txt  Rectangle.cpp  Rectangle.hpp  TODO  argumenty_watku  argumenty_watku.cpp  cheap.cpp  cmake_install.cmake  dup.cpp  install_packages.sh  list.cpp  main.cpp  obiad  podstawowa_synchronizacja  podstawowa_synchronizacja.cpp  pow2.cpp  przekazywanie_przez_kolejke  przekazywanie_przez_kolejke.cpp  stworzenie_watku  stworzenie_watku.cpp  todo  valgrind1.cpp  valgrind2.cpp  valgrind3.cpp  wyjatki  wyjatki.cpp
AbstractFactory/: Makefile
AbstractFactory/src/: Display.cpp  Display.hpp  Gnome.cpp  Gnome.hpp  Kde.cpp  Kde.hpp  UnsupportedSystemException.hpp  Widgets.hpp  Windows.cpp  Windows.hpp  main.cpp
Adapter/: Makefile
Adapter/src/: DrawingLibrary.cpp  DrawingLibrary.hpp  PicturesLibrary.cpp  PicturesLibrary.hpp  (+1 more)
Observer/: Makefile
Proxy/: Makefile  Proxy  proxy.files
bowling-master/: BowlingGame.h  BowlingTDDProject.cpp
src/: BalanceDecrementer.hpp  BalanceIncrementer.hpp  BankAccount.cpp  BankAccount.hpp  BankAccountClientView.hpp  BankClient.cpp  BankClient.hpp  CommandHandler.hpp  Console.cpp  Console.hpp  Functions.cpp  Functions.hpp  GeometricCalculator.hpp  Handlers.cpp  Handlers.hpp  IncomingPayment.cpp  IncomingPayment.hpp  Loger.cpp  Loger.cpp~  Logger.hpp  Logger.hpp~  OutgoingPayment.cpp  OutgoingPayment.hpp  Parser.cpp  Parser.hpp  Rectangle.hpp  Saving.hpp  Shape.hpp  SqlDataSaver.cpp  SqlDataSaver.hpp  SqlDataSaver.hpp~  Square.hpp  main.cpp
(+19 files in other folders)
